# Advent-Of-Code

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  flake.nix  mise.toml
2023/day-1/: Cargo.toml  README.md
2023/day-2/: Cargo.toml  README.md
2023/day-3/: Cargo.toml  README.md
2023/day-4/: Cargo.toml  README.md
2023/day-5/: Cargo.toml  README.md
2023/day-6/: Cargo.toml  README.md
2024/day-1/: Cargo.toml  README.md
2024/day-10/: Cargo.toml  README.md
2024/day-11/: Cargo.toml  README.md
2024/day-12/: Cargo.toml  README.md
2024/day-13/: Cargo.toml  README.md
2024/day-14/: Cargo.toml  README.md
2024/day-15/: Cargo.toml  README.md
2024/day-16/: Cargo.toml  README.md  input2.txt
2024/day-17/: Cargo.toml  README.md
2024/day-18/: Cargo.toml  README.md
2024/day-19/: Cargo.toml  README.md
2024/day-2/: Cargo.toml  README.md
2024/day-20/: Cargo.toml  README.md
2024/day-21/: Cargo.toml  README.md
2024/day-22/: Cargo.toml  README.md
2024/day-23/: Cargo.toml  README.md
2024/day-24/: Cargo.toml  README.md
2024/day-25/: Cargo.toml  README.md
2024/day-3/: Cargo.toml  README.md
2024/day-3/benches/: benchmarks.rs
2024/day-3/src/: lib.rs  part1.rs  part2.pest  part2.rs  part2_pest.rs
2024/day-4/: Cargo.toml  README.md
2024/day-5/: Cargo.toml  README.md
2024/day-6/: Cargo.toml  README.md
daily-template/: Cargo.toml  cargo-generate.toml
daily-template/benches/: benchmarks.rs
daily-template/scripts/: pre_set_project_name.rhai
daily-template/src/: part2.rs
scripts/: get-aoc-input.py  get-aoc-input.rs
(+96 files in other folders)
