[package]
name = "{{crate_name | kebab_case}}"
authors = ["Pablo Hernandez (@Hadronomy)"]
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nom = { workspace = true }
rstest = { workspace = true }
tracing = { workspace = true }
